--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ header::after{
     display: table;
     clear: both;
 }
+/* h1 {
+    padding-top: 50px;
+} */
 
 #page_title {
     text-align: center;
@@ -31,6 +34,7 @@ header::after{
     margin-left: 500px;
     margin-right: 500px;
     margin-top: 0px;
+    border-radius: 10px;
     
 }
 .link_list {
@@ -40,4 +44,13 @@ header::after{
 nav li {
     display: inline-flex;
     margin-left: 50px;
+    padding-top: 30px;
+}
+nav > ul > li > a {
+    color: rgb(107, 95, 39);
+    text-decoration: none;
+    text-transform: uppercase;
+}
+nav > ul > li > a:hover {
+    color: rgb(189, 87, 18);
 }
