--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ nav li {
     display: inline-flex;
     margin-left: 50px;
     padding-top: 30px;
+    position: relative;
+
 }
 nav > ul > li > a {
     color: rgb(107, 95, 39);
@@ -53,4 +55,21 @@ nav > ul > li > a {
 }
 nav > ul > li > a:hover {
     color: rgb(189, 87, 18);
+}
+
+nav > ul > li > a:before {
+    content: '';
+    display: block;
+    height: 5px;
+    width: 100%;
+    background-color: rgb(107, 95, 39);
+
+    position: absolute;
+    top: 0;
+    width: 0;
+
+    transition: all ease-in-out 200ms;
+}
+nav > ul > li > a:hover::before {
+    width: 100%;
 }
