created styling folder

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(Misty.jpg);
+    background-image: url(/css/Misty.jpg);
     background-color: dimgray;
     height: 500px;
     background-position: center;
