--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,60 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 300;
 }
+/* styling the username and password box */
+.login_box {
+    width: 300px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgb(58, 78, 74);
+    text-align: center;
+    border-radius: 30px;
+}
+form > h1 {
+    color: black;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.login_box input[type="text"], .login_box input[type="password"] {
+    border: 0;
+    background: gainsboro;
+    display: block;
+    margin: 25px auto;
+    text-align: center;
+    border: 5px slateblue;
+    padding: 15px 15px;
+    width: 200px;
+    outline: none;
+    color: rgb(12, 7, 7);
+    border-radius: 30px;
+    transition: 0.25px;
+
+}
+.login_box input[type="text"]:focus, .login_box input[type="password"]:focus {
+    width: 270px;
+    border-color: crimson ;
+}
+.login_box input[type="submit"] {
+    border: 0;
+    background: rgb(106, 21, 185);
+    display: block;
+    margin: 25px auto;
+    text-align: center;
+    border: 5px rgb(134, 132, 148);
+    padding: 20px 15px;
+    outline: none;
+    color: white;
+    border-radius: 25px;
+    transition: 0.25px;
+    cursor: pointer;
+}
+.login_box input[type="submit"]:hover {
+    background: darkcyan;
+}
+
 #top {
     background-color: rgb(176, 202, 202);
     margin-top: -20px;
@@ -14,7 +68,6 @@ body {
     margin-left: -7px ;
     margin-right: -7px;
     font-size: large;
-    /* float: right; */
     display: flex;
     
     
@@ -24,9 +77,6 @@ header::after{
     display: table;
     clear: both;
 }
-/* h1 {
-    padding-top: 50px;
-} */
 
 #page_title {
     text-align: center;
