--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 300;
 }
+
 /* styling the username and password box */
 .login_box {
     width: 300px;
@@ -60,6 +61,7 @@ form > h1 {
 .login_box input[type="submit"]:hover {
     background: darkcyan;
 }
+/* Above is the styling of the username and password box */
 
 #top {
     background-color: rgb(176, 202, 202);
