--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,8 @@ form > h1 {
     margin-right: -7px;
     font-size: large;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     
     
 }
@@ -91,7 +93,7 @@ header::after{
 }
 .link_list {
    list-style: none;
-   margin-left: 600px;
+   margin-right: 5px;
 }
 nav li {
     display: inline-flex;
@@ -104,9 +106,15 @@ nav > ul > li > a {
     color: rgb(107, 95, 39);
     text-decoration: none;
     text-transform: uppercase;
+    font-weight: 600;
+    padding: 2px 15px;
+    border-radius: 15px;
+    transition: 0.3s;
+    transition-property: background;
 }
 nav > ul > li > a:hover {
     color: rgb(189, 87, 18);
+    background: wheat;
 }
 
 nav > ul > li > a:before {
@@ -116,14 +124,14 @@ nav > ul > li > a:before {
     width: 100%;
     background-color: rgb(107, 95, 39);
 
-    position: absolute;
-    top: 0;
+    position: relative;
+    top: -35px;
     width: 0;
 
     transition: all ease-in-out 200ms;
 }
 nav > ul > li > a:hover::before {
-    width: 100%;
+    width: 90%;
 }
 nav > h3 > a {
     color: rgb(82, 50, 141);
@@ -133,4 +141,11 @@ nav > h3 > a {
 nav > h3 > a:hover {
     color: rgb(189, 87, 18);
    
+}
+.quotes {
+    max-width: 450px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 550;
+    margin: 30px 30px;
+
 }
