--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ nav > h3 > a {
     color: rgb(82, 50, 141);
     text-decoration: none;
     margin-left: 15px;
+    font-weight: 900;
 }
 nav > h3 > a:hover {
     color: rgb(189, 87, 18);
@@ -147,5 +148,32 @@ nav > h3 > a:hover {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 550;
     margin: 30px 30px;
+}
+.quotes > h3 {
+    color: rgb(37, 72, 167);
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: 4px;
+    line-height: 50px;
+    margin-bottom: 50px;
+}
+.quotes > p {
+    font-size: 17px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+.quotes > a {
+    color: rgb(233, 229, 224);
+    background: rgb(51, 175, 163);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 3px;
+    padding: 10px 15px;
+    border-radius: 10px;
+    transition: 0.2s;
+}
+.quotes > a:hover {
+    background:rgb(25, 100, 93) ;
 
 }
