--- a/css/style.css
+++ b/css/style.css
@@ -201,13 +201,23 @@ nav > h3 > a:hover {
     margin: 0.5em;
     border-radius: 20px;
     border: none;
-    height: 2.0em;
-    width: 5em;
+    height: 3.0em;
+    width: 6em;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+.search > button:hover {
+    background: #22aaa1;
 }
 .search_bar {
     border: none;
     outline: none;
-    padding: 0.7em;
+    padding: 0.7em 1.5em;
     border-radius: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 110%;
+    font-weight: 600;
+}
+.weather_here > h1.temp {
+    margin: 0;
 }
