--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 body {
-    /* background-image: url(/css/Misty.jpg); */
     background-repeat: no-repeat;
     background-color: #91EAE4;
     height: 100vh;
     background-position: center;
     background-size: cover;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 300;
+    font-family: 'Titillium Web', sans-serif;
+       font-weight: 300;
 }
 
 /* styling the username and password box */
@@ -223,4 +222,8 @@ nav > h3 > a:hover {
 }
 .description {
     text-transform: capitalize;
+}
+#copyright {
+    display: flex;
+    justify-content: center;
 }
